fix: fix choose color title wrap

--- a/style.css
+++ b/style.css
@@ -467,19 +467,21 @@ a {
 
 @media screen and (max-width: 999px) {
     .colorPickSection>p {
-        width: 159px;
+        width: 165px;
         height: 22px;
         top: 18px;
         font-size: 18px;
+        text-align: center;
     }
 }
 
 @media screen and (max-width: 639px) {
     .colorPickSection>p {
-        width: 124px;
+        width: 130px;
         height: 17px;
         top: 14px;
         font-size: 14px;
+        text-align: center;
     }
 }
 
